# Streamlit_Growth_Mindset

./: README.md  pyproject.toml
src/streamlit_growth_mindset/: __init__.py  app.py
